--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Ryzzzen,Sealrack",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.16",
     "samss": "^2.2.7",
     "socket.io": "^2.1.0",
