--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "production": "NODE_ENV=production node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ryzzzen,Sealrack",
@@ -15,7 +16,9 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.3",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.16",
+    "pug": "^2.0.3",
     "samss": "^2.2.7",
     "socket.io": "^2.1.0",
     "socketio-auth": "^0.1.0"
