--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
   "author": "Ryzzzen,Sealrack",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "express-socket.io-session": "^1.3.3",
-    "moment": "^2.22.1",
+    "luxon": "^1.2.0",
     "mongoose": "^5.0.16",
     "pug": "^2.0.3",
-    "samss": "^2.2.7",
-    "socket.io": "^2.1.0",
-    "socketio-auth": "^0.1.0"
+    "samss": "^2.2.7"
   }
 }
